fix dark scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,6 @@ html {
     @apply bg-night
 }
 
-root {
+:root {
     color-scheme: dark;
 }
